ic/vendor/libsignal-protocol-sys/libsignal-protocol-c/src/signal_protocol.h

#define SG_SUCCESS 0
#define SG_ERR_DUPLICATE_MESSAGE    -1001
#define SG_ERR_INVALID_KEY          -1002
#define SG_ERR_INVALID_KEY_ID       -1003
#define SG_ERR_INVALID_MESSAGE      -1005
#define SG_ERR_LEGACY_MESSAGE       -1007
#define SG_ERR_NO_SESSION           -1008
#define SG_ERR_UNTRUSTED_IDENTITY   -1010