ic/vendor/libsignal-protocol-sys/libsignal-protocol-c/src/session_state.h

uint32_t session_state_unacknowledged_pre_key_message_get_signed_pre_key_id(const session_state *state);
ec_public_key *session_state_unacknowledged_pre_key_message_get_base_key(const session_state *state);
int session_state_has_unacknowledged_pre_key_message(const session_state *state);
void session_state_clear_unacknowledged_pre_key_message(session_state *state);
void session_state_set_remote_registration_id(session_state *state, uint32_t id);
uint32_t session_state_get_remote_registration_id(const session_state *state);
void session_state_set_local_registration_id(session_state *state, uint32_t id);
uint32_t session_state_get_local_registration_id(const session_state *state);
void session_state_set_needs_refresh(session_state *state, int value);
int session_state_get_needs_refresh(const session_state *state);
void session_state_set_alice_base_key(session_state *state, ec_public_key *key);
ec_public_key *session_state_get_alice_base_key(const session_state *state);
void session_state_destroy(signal_type_base *type);