ic/vendor/libsignal-protocol-sys/bindings.rs

extern "C" {
    pub fn session_state_unacknowledged_pre_key_message_get_signed_pre_key_id(
        state: *const session_state,
    ) -> u32;
}
extern "C" {
    pub fn session_state_unacknowledged_pre_key_message_get_base_key(
        state: *const session_state,
    ) -> *mut ec_public_key;
}
extern "C" {
    pub fn session_state_has_unacknowledged_pre_key_message(
        state: *const session_state,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn session_state_clear_unacknowledged_pre_key_message(
        state: *mut session_state,
    );
}
extern "C" {
    pub fn session_state_set_remote_registration_id(
        state: *mut session_state,
        id: u32,
    );
}
extern "C" {
    pub fn session_state_get_remote_registration_id(
        state: *const session_state,
    ) -> u32;
}
extern "C" {
    pub fn session_state_set_local_registration_id(
        state: *mut session_state,
        id: u32,
    );
}
extern "C" {
    pub fn session_state_get_local_registration_id(
        state: *const session_state,
    ) -> u32;
}
extern "C" {
    pub fn session_state_set_needs_refresh(
        state: *mut session_state,
        value: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn session_state_get_needs_refresh(
        state: *const session_state,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn session_state_set_alice_base_key(
        state: *mut session_state,
        key: *mut ec_public_key,
    );
}
extern "C" {
    pub fn session_state_get_alice_base_key(
        state: *const session_state,
    ) -> *mut ec_public_key;
}
extern "C" {
    pub fn session_state_destroy(type_: *mut signal_type_base);
}
extern "C" {
    /// Constructs a session builder.
    ///
    /// The store and global contexts must remain valid for the lifetime of the
    /// session builder.
    ///
    /// When finished, free the returned instance by calling
    /// session_builder_free().
    ///
    /// @param builder set to a freshly allocated session builder instance
    /// @param store the signal_protocol_store_context to store all state
    /// information in
    /// @param remote_address the address of the remote user to build a session
    /// with
    /// @param global_context the global library context
    /// @return 0 on success, or negative on failure
    pub fn session_builder_create(
        builder: *mut *mut session_builder,
        store: *mut signal_protocol_store_context,
        remote_address: *const signal_protocol_address,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    /// Build a new session from a session_pre_key_bundle retrieved from a
    /// server.
    ///
    /// @param bundle A pre key bundle for the destination recipient, retrieved
    /// from a server.
    /// @retval SG_SUCCESS Success
    /// @retval SG_ERR_INVALID_KEY when the session_pre_key_bundle is badly
    /// formatted.
    /// @retval SG_ERR_UNTRUSTED_IDENTITY when the sender's identity key is not
    /// trusted.
    pub fn session_builder_process_pre_key_bundle(
        builder: *mut session_builder,
        bundle: *mut session_pre_key_bundle,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn session_builder_free(builder: *mut session_builder);
}
extern "C" {
    /// Construct a session cipher for encrypt/decrypt operations on a session.
    /// In order to use session_cipher, a session must have already been created
    /// and stored using session_builder.
    ///
    /// The store and global contexts must remain valid for the lifetime of the
    /// session cipher.
    ///
    /// When finished, free the returned instance by calling
    /// session_cipher_free().
    ///
    /// @param cipher set to a freshly allocated session cipher instance
    /// @param store the signal_protocol_store_context to store all state
    /// information in
    /// @param remote_address the remote address that messages will be encrypted
    /// to or decrypted from.
    /// @param global_context the global library context
    /// @return 0 on success, or negative on failure
    pub fn session_cipher_create(
        cipher: *mut *mut session_cipher,
        store: *mut signal_protocol_store_context,
        remote_address: *const signal_protocol_address,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    /// Set the optional user data pointer for the session cipher.
    ///
    /// This is to give callback functions a way of accessing app specific
    /// context information for this cipher.
    pub fn session_cipher_set_user_data(
        cipher: *mut session_cipher,
        user_data: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    /// Get the optional user data pointer for the session cipher.
    ///
    /// This is to give callback functions a way of accessing app specific
    /// context information for this cipher.
    pub fn session_cipher_get_user_data(
        cipher: *mut session_cipher,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    /// Set the callback function that is called during the decrypt process.
    ///
    /// The callback function is called from within
    /// session_cipher_decrypt_pre_key_signal_message() and
    /// session_cipher_decrypt_signal_message() after decryption is complete
    /// but before the updated session state has been committed to the session
    /// store. If the callback function returns a negative value, then the
    /// decrypt function will immediately fail with an error.
    ///
    /// This a callback allows some implementations to store the committed
    /// plaintext
    /// to their local message store first, in case they are concerned with a
    /// crash
    /// or write error happening between the time the session state is updated
    /// but
    /// before they're able to successfully store the plaintext to disk.
    ///
    /// @param callback the callback function to set
    pub fn session_cipher_set_decryption_callback(
        cipher: *mut session_cipher,
        callback: ::std::option::Option<
            unsafe extern "C" fn(
                cipher: *mut session_cipher,
                plaintext: *mut signal_buffer,
                decrypt_context: *mut ::std::os::raw::c_void,
            ) -> ::std::os::raw::c_int,
        >,
    );
}
extern "C" {
    /// Encrypt a message.
    ///
    /// @param padded_message The plaintext message bytes, optionally padded to
    /// a constant multiple.
    /// @param padded_message_len The length of the data pointed to by
    /// padded_message
    /// @param encrypted_message Set to a ciphertext message encrypted to the
    /// recipient+device tuple.
    ///
    /// @return SG_SUCCESS on success, negative on error
    pub fn session_cipher_encrypt(
        cipher: *mut session_cipher,
        padded_message: *const u8,
        padded_message_len: usize,
        encrypted_message: *mut *mut ciphertext_message,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    /// Decrypt a message.
    ///
    /// @param ciphertext The pre_key_signal_message to decrypt.
    /// @param decrypt_context Optional context pointer associated with the
    ///   ciphertext, which is passed to the decryption callback function
    /// @param plaintext Set to a newly allocated buffer containing the
    /// plaintext.
    ///
    /// @retval SG_SUCCESS Success
    /// @retval SG_ERR_INVALID_MESSAGE if the input is not valid ciphertext.
    /// @retval SG_ERR_DUPLICATE_MESSAGE if the input is a message that has
    /// already been received.
    /// @retval SG_ERR_LEGACY_MESSAGE if the input is a message formatted by a
    /// protocol version that
    ///                               is no longer supported.
    /// @retval SG_ERR_INVALID_KEY_ID when there is no local pre_key_record
    ///                               that corresponds to the pre key ID in the
    /// message.
    /// @retval SG_ERR_INVALID_KEY when the message is formatted incorrectly.
    /// @retval SG_ERR_UNTRUSTED_IDENTITY when the identity key of the sender is
    /// untrusted.
    pub fn session_cipher_decrypt_pre_key_signal_message(
        cipher: *mut session_cipher,
        ciphertext: *mut pre_key_signal_message,
        decrypt_context: *mut ::std::os::raw::c_void,
        plaintext: *mut *mut signal_buffer,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    /// Decrypt a message.
    ///
    /// @param ciphertext The signal_message to decrypt.
    /// @param decrypt_context Optional context pointer associated with the
    ///   ciphertext, which is passed to the decryption callback function
    /// @param plaintext Set to a newly allocated buffer containing the
    /// plaintext.
    ///
    /// @retval SG_SUCCESS Success
    /// @retval SG_ERR_INVALID_MESSAGE if the input is not valid ciphertext.
    /// @retval SG_ERR_DUPLICATE_MESSAGE if the input is a message that has
    /// already been received.
    /// @retval SG_ERR_LEGACY_MESSAGE if the input is a message formatted by a
    /// protocol version that
    ///                               is no longer supported.
    /// @retval SG_ERR_NO_SESSION if there is no established session for this
    /// contact.
    pub fn session_cipher_decrypt_signal_message(
        cipher: *mut session_cipher,
        ciphertext: *mut signal_message,
        decrypt_context: *mut ::std::os::raw::c_void,
        plaintext: *mut *mut signal_buffer,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    /// Gets the remote registration ID for this session cipher.
    ///
    /// @param remote_id Set to the value of the remote registration ID
    ///
    /// @return SG_SUCCESS on success, negative on error
    pub fn session_cipher_get_remote_registration_id(
        cipher: *mut session_cipher,
        remote_id: *mut u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    /// Gets the version of the session associated with this session cipher.
    ///
    /// @param version Set to the value of the session version
    ///
    /// @retval SG_SUCCESS Success
    /// @retval SG_ERR_NO_SESSION if no session could be found
    pub fn session_cipher_get_session_version(
        cipher: *mut session_cipher,
        version: *mut u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn session_cipher_free(cipher: *mut session_cipher);
}
extern "C" {
    /// Generate an identity key pair.  Clients should only do this once,
    /// at install time.
    ///
    /// @param key_pair the generated identity key pair
    /// @return 0 on success, or negative on failure
    pub fn signal_protocol_key_helper_generate_identity_key_pair(
        key_pair: *mut *mut ratchet_identity_key_pair,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    /// Generate a registration ID.  Clients should only do this once,
    /// at install time.
    ///
    /// @param registration_id set to the generated registration ID
    /// @param extended_range By default (0), the generated registration
    ///                      ID is sized to require the minimal possible
    /// protobuf
    ///                      encoding overhead. Specify true (1) if the caller
    /// needs
    ///                      the full range of MAX_INT at the cost of slightly
    ///                      higher encoding overhead.
    /// @return 0 on success, or negative on failure
    pub fn signal_protocol_key_helper_generate_registration_id(
        registration_id: *mut u32,
        extended_range: ::std::os::raw::c_int,
        global_context: *mut signal_context,
    ) -> ::std::os::raw::c_int;
}
